--- a/app/editor.css
+++ b/app/editor.css
@@ -19,7 +19,7 @@
   flex-grow: 1;
   flex-shrink: 1;
   min-width: 0;
-  margin-left: 2px;
+  margin-left: 10px;
 }
 
 .vega-editor .module {
@@ -66,4 +66,17 @@
 
 .vega-editor .mod_ctrls input {
   height: 19px;
+}
+
+.vega-editor .vis {
+  -webkit-flex-grow: 0;
+  -webkit-flex-shrink: 0;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+.vega-editor .spec_desc {
+  margin-top: 10px;
+  font-size: 12px;
+  color: #666;
 }
