--- a/app/editor.css
+++ b/app/editor.css
@@ -3,12 +3,14 @@
   display: flex;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
+  background-color: #f6f6f6;
 }
 
 .vega-editor .mod_spec {
   -webkit-flex: 0 0 auto;
   flex: 0 0 auto;
   min-width: 540px;
+  border-right: 1px solid #ccc;
 }
 
 .vega-editor .mod_vis {
@@ -16,6 +18,8 @@
   flex: 1 1 auto;
   min-width: 0;
   margin-left: 10px;
+  background-color: white;
+  border-left: 1px solid #ccc;
 }
 
 .vega-editor .module {
@@ -35,6 +39,20 @@
   line-height: 22px;
 }
 
+.vega-editor .mod_subheader {
+  -webkit-flex: 0 0 auto;
+  flex: 0 0 auto;
+  padding: 2px 4px 2px 6px;
+  background: #eee;
+  border-bottom: 1px solid #ccc;
+  border-top: 1px solid #ccc;
+  line-height: 18px;
+  font-size: 12px;
+}
+
+.vega-editor .vg_pane { cursor: pointer; }
+.vega-editor .vg_pane:hover { background: #fafafa; }
+
 .vega-editor .mod_body {
   -webkit-flex: 1 1 0;
   flex: 1 1 auto;
@@ -43,8 +61,14 @@
 }
 
 .vega-editor .vis {
-  -webkit-flex: 0 0 auto;
-  flex: 0 0 auto;
+  overflow: auto;
+  margin: 4px;
+}
+
+.vega-editor .sel_mode {
+  font-size: 15pt;
+  width: 125px;
+  margin-left: 5px;
 }
 
 .vega-editor .mod_params {
@@ -55,15 +79,23 @@
 .vega-editor .spec_desc {
   -webkit-flex: 0 0 auto;
   flex: 0 0 auto;
-  padding-top: 10px;
+  margin: 4px;
   font-size: 12px;
   color: #666;
 }
 
-.vega-editor .spec { 
+.vega-editor .spec {
   font-family: Monaco, Courier New;
   font-size: 10px;
   white-space: pre;
+}
+
+.vg-spec .ace_content.disabled {
+  background-color: #E4E4E4;
+}
+
+.vg-spec .ace_content.disabled .ace_cursor {
+  color: transparent;
 }
 
 .vega-editor .vis svg,
@@ -77,6 +109,14 @@
 
 .vega-editor .mod_ctrls input {
   height: 19px;
+}
+
+.vega-editor .vl-spec .ace_scrollbar {
+  display: none;
+}
+
+.vega-editor .vl-spec:hover .ace_scrollbar {
+  display: block;
 }
 
 .vega-param {
@@ -124,4 +164,34 @@
   box-sizing: border-box;
   width: 130px;
   max-width: 130px;
+}
+
+.vega-editor .click_toggle_vega {
+  cursor: pointer;
+  display: inline-block;
+  width: 64px;
+  height: 13px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 18px;
+  position: relative;
+  top: 3px;
+  opacity: 0.7;
+}
+
+.vega-editor .click_toggle_vega.up {
+  background-image: url("../images/chevron_up.png");
+}
+
+.vega-editor .click_toggle_vega.down {
+  background-image: url("../images/chevron_down.png");
+}
+
+/* hide some elements in vega mode */
+.vega-editor.vega .hide-vg {
+  display: none;
+}
+
+.vega-editor.vega-lite .hide-vl {
+  display: none;
 }
