--- a/app/debugger.css
+++ b/app/debugger.css
@@ -195,6 +195,9 @@ span.name {
   background-color: #F1F1F1;
   overflow: hidden;
   box-shadow: inset 0 0 2px #5997A6;
+  max-width: 700px;
+  max-height: 250px;
+  text-overflow: ellipsis;
 }
 
 /************************** Timeline **************************/
