--- a/app/debugger.css
+++ b/app/debugger.css
@@ -21,7 +21,7 @@
   display: none;
 }
 
-.vega-editor.vega-lite .debug {
+.vega-editor.compassql .debug, .vega-editor.vega-lite .debug {
   display: none;
 }
 
@@ -44,7 +44,7 @@
   color: #aaa;
   cursor: pointer;
 }
-.click_toggle_vis:hover { 
+.click_toggle_vis:hover {
   background: #eee;
 }
 
@@ -108,8 +108,8 @@
   font-size: 8pt;
 }
 
-#data table::-webkit-scrollbar { 
-  display: none; 
+#data table::-webkit-scrollbar {
+  display: none;
 }
 
 .more {
@@ -189,7 +189,7 @@ span.name {
   position: absolute;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 8pt;
-  pointer-events: none; 
+  pointer-events: none;
   cursor: default;
   padding: 4px;
   color: #8BB6C1;
@@ -265,10 +265,10 @@ span.name {
   min-height: 18px;
 
   text-align: center;
-  font: 10px monospace;  
+  font: 10px monospace;
   color: white;
   padding: 2px;
-  background: rgba(0, 0, 0, 0.8); 
+  background: rgba(0, 0, 0, 0.8);
   border-radius: 2px;
   pointer-events: none;
 }
@@ -276,7 +276,7 @@ span.name {
 .extension {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 8pt;
-  pointer-events: none; 
+  pointer-events: none;
   padding: 4px;
   height: 12px;
   max-width: 300px;
@@ -284,10 +284,10 @@ span.name {
   overflow: hidden;
 }
 
-.label {   
-  position: absolute;           
-  text-align: center;           
-  pointer-events: none; 
+.label {
+  position: absolute;
+  text-align: center;
+  pointer-events: none;
   box-shadow: inset 0 0 2px white;
   border-radius: 2px;
 }
@@ -301,7 +301,7 @@ span.name {
 .label td, .label td div {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 8pt;
-  pointer-events: none; 
+  pointer-events: none;
   padding: 2px;
   color: white;
   overflow: hidden;
@@ -351,14 +351,14 @@ span.name {
   pointer-events: none;
 }
 
-.probe {   
-  position: absolute;           
-  text-align: center;           
-  padding: 2px;             
+.probe {
+  position: absolute;
+  text-align: center;
+  padding: 2px;
   color: white;
   background: rgba(0, 0, 0, 0.8);
   border-radius: 2px;
-  pointer-events: none;  
+  pointer-events: none;
 }
 
 .probe table, .probe td, .probe th {
