use vega-embed so we can easily copy vega-lite output
cc: @domoritz

--- a/app/editor.css
+++ b/app/editor.css
@@ -222,3 +222,12 @@
 .vislist .itemname {
   font-size: 10px
 }
+
+.vislist .vega-actions {
+  text-align: center;
+}
+
+.vislist .vega-actions a{
+  font-size: 10px;
+  margin-right: 4px;
+}
