hide group name for collapsed groups

--- a/app/editor.css
+++ b/app/editor.css
@@ -216,6 +216,10 @@
   overflow-x: scroll;
 }
 
+.vislist .vislistgroup.collapsed .groupheader .groupname{
+  display: none;
+}
+
 .vislist .vislistgroup .groupexpander {
   color: steelblue;
   cursor: pointer;
