Update deployed files.

--- a/app/debugger.css
+++ b/app/debugger.css
@@ -88,9 +88,6 @@
 
 /************************* Data Table *************************/
 /*************************** Table ****************************/
-#data {
-  width: 100px;
-}
 
 #header {
   overflow: scroll;
@@ -110,6 +107,7 @@
   overflow: scroll;
   border-collapse: collapse;
   font-size: 8pt;
+  cursor: pointer;
 }
 
 #data table::-webkit-scrollbar {
@@ -213,7 +211,7 @@ span.name {
 }
 
 /*************************** Table ****************************/
-#timeline, table, tr {
+#timeline, #timeline table, #timeline tr {
   width: 100%;
 }
 
