--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -191,6 +191,21 @@
   color: white;
 }
 
+.gist-save-button:hover  {
+  background: rgb(92, 64, 141);
+  color: white;
+}
+
+.gist-save-button {
+  background: white;
+  border: 1px solid #A9A9A9;
+  cursor: pointer;
+  width: 100%;
+  height: 30px;
+  font-size: 16px;
+  outline: none;
+}
+
 .gist-text {
   margin-top: 25px;
   font-size: 12px;
@@ -211,6 +226,31 @@
   margin-top: 20px;
   margin-bottom: 30px;
   padding: 5px;
+}
+
+.gist-save-input {
+  display: inline;
+  width: 100%;
+  resize: none;
+  font-size: 14px;
+  margin-top: 5px;
+  margin-bottom: 30px;
+  padding: 5px;
+}
+
+.gist-filename {
+  display: inline;
+}
+
+.gist-filename-text {
+  font-size: 12px;
+  font-style: italic;
+}
+
+.gist-filename-example {
+  font-size: 12px;
+  font-style: italic;
+  color: rgb(6,69,173);
 }
 
 .customSubmenu {
