--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -215,14 +215,13 @@
 }
 
 .customSubmenu {
-  border-left: solid 1px #666;
-  border-right: solid 1px #666;
-  border-bottom: solid 1px #666;
   font-size: 16px;
-  padding: 10px 10px;
+  padding: 10px 23px;
   background: white;
+  border-left: solid 1px #A9A9A9;
+  border-right: solid 1px #A9A9A9;
+  border-bottom: solid 1px #A9A9A9;
   cursor: pointer;
-  width: 160px;
 }
 
 .customSubmenu:hover {
