--- a/src/components/input-panel/spec-editor/index.css
+++ b/src/components/input-panel/spec-editor/index.css
@@ -1,3 +1,11 @@
 .sizeFixEditorParent .react-monaco-editor-container {
     overflow: hidden;
 }
+
+#parse-button {
+    position: absolute;
+    right: 3%;
+    cursor: pointer;
+    z-index: 1;
+    padding: 5px 5px;
+}
