--- a/src/components/error-pane/index.css
+++ b/src/components/error-pane/index.css
@@ -2,9 +2,20 @@ li {
   list-style-type: none;
 }
 .error {
-  color: red
+  color: red;
 }
 
-.warnings {
+.warning {
   color: #f0ad4e;
+}
+
+.info {
+  color: #399e39;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  cursor: pointer;
 }
