--- a/src/components/input-panel/spec-editor/index.css
+++ b/src/components/input-panel/spec-editor/index.css
@@ -1,19 +1,14 @@
-.sizeFixEditorParent .react-monaco-editor-container {
-    overflow: hidden;
-}
-
-#parse-button {
-    position: absolute;
-    right: 3%;
-    cursor: pointer;
-}
-
-.editor-header {
-    font-size: 12px;
-    width: 100%;
-    height: 25px;
-    flex-shrink: 0;
-    background-color: #e6e6e6;
+.full-height-wrapper {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: stretch;
+    width: 100%;
+}
+
+.full-height-wrapper > .full-height-wrapper {
+    flex: 1;
+}
+
+.full-height-wrapper .react-monaco-editor-container {
+    flex: 1;
 }
