--- a/src/components/renderer/index.css
+++ b/src/components/renderer/index.css
@@ -1,3 +1,11 @@
+.chart-container {
+  width: 100%;
+  height: 100%;
+  background: rgba(243, 240, 240, 0.63);
+  padding: 10px;
+  overflow: auto;
+}
+
 .chart {
   background: white;
   padding: 10px;
