--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -233,3 +233,22 @@
 #emptyButton:hover {
   border-bottom: solid 5px rgb(92, 64, 141);
 }
+
+.caret {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 5px 5px 0 5px;
+  border-color: black transparent transparent transparent;
+  display: inline-block;
+  margin-left: 6px;
+  top: -3px;
+  position: relative;
+  transform: rotate(0deg);
+  transition: all .25s ease-in;
+}
+
+.caret.open {
+  transform: rotate(180deg);
+  transition: all .25s ease-out;
+}
